--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 html(lang="en")
 head
-  title DevTips Starter Kit
+  title Estudio Remate
   meta(charset="UTF-8")
   meta(name="viewport", content="width=device-width, initial-scale=1")
   link(rel="shortcut icon", href="./assets/img/favicons/favicon.ico")
