--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -8,8 +8,19 @@ head
   link(rel="stylesheet", href="assets/css/main.css")
 body
   .page-home
-    section 
-      h1 Estudio Remate
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet alias itaque consectetur fuga magni quia hic possimus provident cupiditate, nemo cumque officiis quam sint voluptatibus, natus similique? Labore ad, fugit.
+    section.main-wrap
+      .logo 
+        img(src="assets/img/remate-02.png", alt="Estudio Remate")
+      h1.logo-text estudio remate.
+      
+    section.social
+      .profiles 
+        ul.social-icons
+          li.icon 
+            a(href="https://www.twitter.com/estudioremate") Twitter
+          li.icon 
+            a(href="https://www.instagram.com/estudioremate") Instagram
+          li.icon 
+            a(href="mailto:javier@estudioremate.com") E-mail
   script(src="./vendors/jquery/dist/jquery.min.js")
   script(src="./assets/js/app.js")
