--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -5,6 +5,7 @@ head
   meta(charset="UTF-8")
   meta(name="viewport", content="width=device-width, initial-scale=1")
   link(rel="shortcut icon", href="./assets/img/favicons/favicon.ico")
+  link(rel="stylesheet", href="assets/css/animate.css")
   link(rel="stylesheet", href="assets/css/main.css")
 body
   .page-home
